--- a/portfolio.html
+++ b/portfolio.html
@@ -400,50 +400,51 @@
         <li class="content-item link list">
             <a href="" class="portfolio-img">
                 <div class="portfolio-thumb">
+                  <picture>
                     <source
-                  media="(min-width: 1200px)"
-                  srcset="
-                    ./images/works/works-6-desktop.webp    1x,
-                    ./images/works/works-6-desktop@2x.webp 2x
-                  "
-                  type="image/webp"
-                />
-                <source
-                  media="(min-width: 1200px)"
-                  srcset="
-                    ./images/works/works-6-desktop.jpg    1x,
-                    ./images/works/works-6-desktop@2x.jpg 2x
-                  "
-                  type="image/webp"
-                />
-
-                <source
-                  media="(min-width: 768px)"
-                  srcset="
-                    ./images/works/works-6-tablet.webp    1x,
-                    ./images/works/works-6-tablet@2x.webp 2x
-                  "
-                  type="image/webp"
-                />
-                <source
-                  media="(min-width: 768px)"
-                  srcset="
-                    ./images/works/works-6-tablet.jpg    1x,
-                    ./images/works/works-6-tablet@2x.jpg 2x
-                  "
-                  type="image/webp"
-                />
-
-                <source
-                  media="(min-width: 480px)"
-                  srcset="./images/works/works-6.webp 1x, ./images/works/works-6@2x.webp 2x"
-                  type="image/webp"
-                />
-                <source
-                  media="(min-width: 480px)"
-                  srcset="./images/works/works-6.jpg 1x, ./images/works/works-6@2x.jpg 2x"
-                  type="image/webp"
-                />
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/works/works-6-desktop.webp    1x,
+                        ./images/works/works-6-desktop@2x.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/works/works-6-desktop.jpg    1x,
+                        ./images/works/works-6-desktop@2x.jpg 2x
+                      "
+                      type="image/webp"
+                    />
+    
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/works/works-6-tablet.webp    1x,
+                        ./images/works/works-6-tablet@2x.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/works/works-6-tablet.jpg    1x,
+                        ./images/works/works-6-tablet@2x.jpg 2x
+                      "
+                      type="image/webp"
+                    />
+    
+                    <source
+                      media="(min-width: 480px)"
+                      srcset="./images/works/works-6.webp 1x, ./images/works/works-6@2x.webp 2x"
+                      type="image/webp"
+                    />
+                    <source
+                      media="(min-width: 480px)"
+                      srcset="./images/works/works-6.jpg 1x, ./images/works/works-6@2x.jpg 2x"
+                      type="image/webp"
+                    />
                 <img src="./images/img6.jpg" alt="Проект"/>
               </picture>
             <p class="portfolio-overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
